# ORP-Reference-kit

./: CONTRACT_BRIDGE.md  README.md  pyproject.toml
.github/workflows/: cts-2.7-ci.yml  orp_cts.yml
cts/: __init__.py  cts_harness.py
docs/: ANNEX-A-CTS-2-7.md  ORP-SPEC-2.7-CANON.md  architecture.md  glossary.md  interfaces.md  invariants.md
examples/: minimal_run.py  stress_stub.py
golden/: e01_trace.json  golden_run.py
src/orp_v2_7/: __init__.py  config.py  core_types.py  cts_harness.py  golden_run.py  kernel.py  protected_cm.py  runtime.py
tests/: test_golden_run.py
