[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orp-v2-7"
version = "2.7.0"
authors = [
  { name="Laurentius" },
]
description = "ORP v2.7 Reference Kit"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
